added transaction entity and credit package enttiy , change auto generation type to identity

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /CrazyAuctionsJpa-ejb/nbproject/private/
 /CrazyAuctionsJpaClient/nbproject/private/
 /CrazyAuctionsJpaLibrary/nbproject/private/
+/CrazyAuctionsJpa-ejb/build/
+/CrazyAuctionsJpaLibrary/build/
+/CrazyAuctionsJpaLibrary/dist/
+/build/
