Team member changed a few things

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /CrazyAuctionsJpaLibrary/build/
 /CrazyAuctionsJpaLibrary/dist/
 /build/
+/dist/
+/CrazyAuctionsJpaClient/build/
+/CrazyAuctionsJpaClient/dist/
+/CrazyAuctionsJpa-ejb/dist/
