--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,8 @@ j2ee.server.type=gfv510ee8
 jar.compress=false
 jar.content.additional=\
     ${reference.CrazyAuctionsJpa-ejb.dist-ear}:\
-    ${reference.CrazyAuctionsJpaClient.j2ee-module-car}
+    ${reference.CrazyAuctionsJpaClient.j2ee-module-car}:\
+    ${reference.CrazyAuctionsJpaAdminClient.j2ee-module-car}
 jar.name=CrazyAuctionsJpa.ear
 javac.debug=true
 javac.deprecation=false
@@ -32,8 +33,10 @@ meta.inf=src/conf
 no.dependencies=false
 platform.active=default_platform
 project.CrazyAuctionsJpa-ejb=CrazyAuctionsJpa-ejb
+project.CrazyAuctionsJpaAdminClient=CrazyAuctionsJpaAdminClient
 project.CrazyAuctionsJpaClient=CrazyAuctionsJpaClient
 reference.CrazyAuctionsJpa-ejb.dist-ear=${project.CrazyAuctionsJpa-ejb}/dist/CrazyAuctionsJpa-ejb.jar
+reference.CrazyAuctionsJpaAdminClient.j2ee-module-car=${project.CrazyAuctionsJpaAdminClient}/dist/CrazyAuctionsJpaAdminClient.jar
 reference.CrazyAuctionsJpaClient.j2ee-module-car=${project.CrazyAuctionsJpaClient}/dist/CrazyAuctionsJpaClient.jar
 resource.dir=setup
 source.root=.
