--- a/CrazyAuctionsJpaJavaSeClient/nbproject/project.properties
+++ b/CrazyAuctionsJpaJavaSeClient/nbproject/project.properties
@@ -35,7 +35,9 @@ dist.jlink.output=${dist.jlink.dir}/CrazyAuctionsJpaJavaSeClient
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.jakartaee-api-8.0.classpath}:\
+    ${reference.CrazyAuctionsJpaLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,6 +78,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.CrazyAuctionsJpaLibrary=../CrazyAuctionsJpaLibrary
+reference.CrazyAuctionsJpaLibrary.jar=${project.CrazyAuctionsJpaLibrary}/dist/CrazyAuctionsJpaLibrary.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
